# esp-gmf

./: .codespellrc  .gitignore  .gitlab-ci.yml  README.md  README_CN.md  conftest.py  pytest.ini
.github/workflows/: upload_component.yml
.gitlab/ci/: .build_test_rules.yml  build_examples.yml  build_ut.yml  build_ut_gmf_core.yml  common.yml  pre_check.yml  rules.yml  target_examples.yml  target_ut.yml
elements/gmf_ai_audio/: CHANGELOG.md  README.md  README_CN.md  idf_component.yml
elements/gmf_audio/: CHANGELOG.md  esp_gmf_alc.c  esp_gmf_audio_dec.c  esp_gmf_audio_enc.c  esp_gmf_audio_param.c  esp_gmf_bit_cvt.c  esp_gmf_ch_cvt.c  esp_gmf_deinterleave.c  esp_gmf_eq.c  esp_gmf_fade.c  esp_gmf_interleave.c  esp_gmf_mixer.c  esp_gmf_rate_cvt.c  esp_gmf_sonic.c  idf_component.yml
elements/gmf_io/: CHANGELOG.md  esp_gmf_io_embed_flash.c  esp_gmf_io_file.c  esp_gmf_io_http.c  esp_gmf_io_i2s_pdm.c  idf_component.yml
elements/gmf_misc/: CHANGELOG.md  idf_component.yml
elements/gmf_video/: CHANGELOG.md  README.md  README_CN.md  idf_component.yml  (+7 more)
examples/esp_audio_simple_player/test_apps/main/: CMakeLists.txt  aud_simp_player_test.c  idf_component.yml
gmf_core/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  idf_component.yml
gmf_elements/test_apps/main/: CMakeLists.txt  idf_component.yml
gmf_elements/test_apps/main/elements/: gmf_ai_audio_test.c  gmf_audio_effects_test.c  gmf_audio_play_com.c  gmf_audio_play_com.h  gmf_audio_play_el_test.c  gmf_audio_rec_el_test.c  gmf_el_if_test.c
gmf_examples/: CHANGELOG.md  README.md  README_CN.md  idf_component.yml
(+257 files in other folders)
